[project]
name = "actos-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dpkt>=1.9.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[project.scripts]
actos-parser = "actos_parser.__main__:main"
